--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 server.port=8082
 
+#log»’÷æ
+logging.level.com.zw=trace
+logging.file.path=D:/springboot.log
+
+#mybatis plus≈‰÷√
+mybatis-plus.mapper-locations=classpath:/mapping/*.xml
+#mybatis.configuration.mapUnderscoreToCamelCase=true
+mybatis-plus.configuration.map-underscore-to-camel-case=false
 
 Login:
     username: admin
