--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,6 @@
             <scope>runtime</scope>
         </dependency>
 
-
         <!--        mybatis plus-->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -103,11 +102,12 @@
 
 
 <!--        热部署-->
-        <dependency>
-            <groupId> org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId> org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-devtools</artifactId>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
+
 
     </dependencies>
 
@@ -118,15 +118,15 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.5.0</version>
             </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <!-- 自动重启 -->
-                <configuration>
-                    <fork>true</fork>
-                    <!-- 如果没有该项配置，肯呢个devtools不会起作用，即应用不会restart -->
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                &lt;!&ndash; 自动重启 &ndash;&gt;-->
+<!--                <configuration>-->
+<!--                    <fork>true</fork>-->
+<!--                    &lt;!&ndash; 如果没有该项配置，肯呢个devtools不会起作用，即应用不会restart &ndash;&gt;-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
