--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ mybatis-plus.configuration.map-underscore-to-camel-case=false
 Login:
     username: admin
     password: admin
+
+#过期时间 秒s
+outside_time:60
+#token秘钥
+token_password:a1g2y47dg3dj59fjhhsd7cnewy73j
